--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <img src="User.png.crdownload" class="profile img-circle" height="200" width="200" alt="Profile Picture" style="margin-top:10px;">
         <h1 >I Am 
             <br>
-            <span id="name" >Name</span>
+            <span id="name" >Sir Tim Berners Lee</span>
         </h1>
-        <h2 > This is my World</h2>
+        <h2 > Here you can find everything about me</h2>
     </section>
 
 
